tests/snapshots/integration__integration_tests__config_show__config_show_displays_project_commit_generation_deprecations.snap
---
source: tests/integration_tests/config_show.rs
info:
  program: wt
  args:
    - config
    - show
  env:
    APPDATA: "[TEST_CONFIG_HOME]"
    CLAUDE_AGENT_ID: ""
    CLICOLOR_FORCE: "1"
    COLUMNS: "500"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    GIT_TERMINAL_PROMPT: "0"
    HOME: "[TEST_HOME]"
    LANG: C
    LC_ALL: C
    MOCK_CONFIG_DIR: "[MOCK_CONFIG_DIR]"
    NO_COLOR: ""
    OPENCODE_CONFIG_DIR: "[TEST_OPENCODE_CONFIG]"
    PATH: "[PATH]"
    PSModulePath: ""
    RUST_LOG: warn
    SHELL: ""
    TERM: alacritty
    USERPROFILE: "[TEST_HOME]"
    WORKTRUNK_APPROVALS_PATH: "[TEST_APPROVALS]"
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
    WORKTRUNK_SYSTEM_CONFIG_PATH: "[TEST_SYSTEM_CONFIG]"
    WORKTRUNK_TEST_ASSUME_TTY: "1"
    WORKTRUNK_TEST_CLAUDE_INSTALLED: "0"
    WORKTRUNK_TEST_DELAYED_STREAM_MS: "-1"
    WORKTRUNK_TEST_EPOCH: "1735776000"
    WORKTRUNK_TEST_NUSHELL_ENV: "0"
    WORKTRUNK_TEST_OPENCODE_INSTALLED: "0"
    WORKTRUNK_TEST_POWERSHELL_ENV: "0"
    WORKTRUNK_TEST_SKIP_URL_HEALTH_CHECK: "1"
    WT_HOOK_CONTEXT: ""
    XDG_CONFIG_HOME: "[TEST_CONFIG_HOME]"
---
success: true
exit_code: 0
----- stdout -----
[36mUSER CONFIG[39m @ ~/.config/worktrunk/config.toml
[33m▲[39m [33mUser config: [1m[projects."github.com/example/repo".commit-generation][22m is deprecated in favor of [1m[projects."github.com/example/repo".commit.generation][22m[39m
[2m↳[22m [2mTo apply: [4mwt config update[24m[22m
[2m○[22m Proposed diff:
[107m [0m [1mdiff --git a/config.toml/current b/config.toml/migrated[m
[107m [0m [1mindex de80729..131a2fd 100644[m
[107m [0m [1m--- a/config.toml/current[m
[107m [0m [1m+++ b/config.toml/migrated[m
[107m [0m [36m@@ -1,4 +1,4 @@[m
[107m [0m  worktree-path = "../{{ repo }}.{{ branch }}"[m
[107m [0m  [m
[107m [0m [31m-[projects."github.com/example/repo".commit-generation][m
[107m [0m [32m+[m[32m[projects."github.com/example/repo".commit.generation][m
[107m [0m  command = "llm -m gpt-4"[m
[2m↳[22m [2mOptional system config not found @ [2m/etc/xdg/worktrunk/config.toml[22m[22m

[36mPROJECT CONFIG[39m @ _REPO_/.config/wt.toml
[2m↳[22m [2mNot found[22m

[36mSHELL INTEGRATION[39m
[33m▲[39m [33mShell integration not active[39m
[107m [0m Invoked as: [1m[PROJECT_ROOT]/target/debug/wt[22m

[2m○[22m [2mbash: Skipped; ~/.bashrc not found[22m
[2m○[22m [2mzsh: Skipped; ~/.zshrc not found[22m
[2m○[22m [2mfish: Skipped; ~/.config/fish/functions not found[22m
[2m○[22m [2mnu: Skipped; ~/.config/nushell/vendor/autoload not found[22m

[36mOTHER[39m
[2m○[22m wt: [1m[VERSION][22m
[2m○[22m wt binary: [1m[PROJECT_ROOT]/target/debug/wt[22m
[2m○[22m git: [1m[VERSION][22m
[2m○[22m Hyperlinks: [1minactive[22m

----- stderr -----
